--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.show-sql=true
-spring.security.user.name = username
-spring.security.user.password ={bcrypt}encryptedPassword
+spring.security.user.name=username
+spring.security.user.password=password
